--- a/Final Predictions.ipynb
+++ b/Final Predictions.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,17 +208,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "source_dataset = train_clinical['SourceDataset']\n",
     "shape_cols, firstorder_cols, glcm_cols, glrlm_cols = get_features(train_radiomics)\n",
     "\n",
-    "significant_shape = get_significant_features(train_radiomics[shape_cols], train_y, source_dataset)\n",
-    "significant_firstorder = get_significant_features(train_radiomics[firstorder_cols],train_y, source_dataset)\n",
-    "significant_glcm = get_significant_features(train_radiomics[glcm_cols], train_y, source_dataset)\n",
-    "significant_glrlm = get_significant_features(train_radiomics[glrlm_cols], train_y, source_dataset)\n",
+    "significant_shape = get_significant_features(train_radiomics[shape_cols], y_train, source_dataset)\n",
+    "significant_firstorder = get_significant_features(train_radiomics[firstorder_cols],y_train, source_dataset)\n",
+    "significant_glcm = get_significant_features(train_radiomics[glcm_cols], y_train, source_dataset)\n",
+    "significant_glrlm = get_significant_features(train_radiomics[glrlm_cols], y_train, source_dataset)\n",
     "\n",
     "most_significants = significant_shape.append([significant_firstorder, significant_glcm])"
    ]
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>time fit was run</th>\n",
-       "      <td>2020-02-03 11:38:19 UTC</td>\n",
+       "      <td>2020-02-04 13:53:12 UTC</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "10    463.122293    NaN"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,6 +535,13 @@
     "preds = pd.DataFrame({\"SurvivalTime\": preds, \"Event\": np.nan})\n",
     "preds.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
